--- a/css/footer.css
+++ b/css/footer.css
@@ -1,11 +1,12 @@
 /* footer */
 footer {
-  /* background-color: rgba(220, 220, 220, 0.3); */
   width: 100%;
   height: 60px;
-  position: fixed;
+  position: relative;
   text-align: center;
-  bottom: 0;
   font-weight: bold;
   font-size: 20px;
+}
+p {
+  line-height: 60px;
 }
