--- a/css/question_css.css
+++ b/css/question_css.css
@@ -20,7 +20,6 @@
   height: 50px;
 }
 .short_bar {
-  width: 300px;
   height: 50px;
   background-color: yellow;
 }
@@ -46,4 +45,7 @@
 .answer2 {
   font-size: 15px;
   width: 400px;
+}
+button {
+  border-radius: 10%;
 }
