--- a/css/index.css
+++ b/css/index.css
@@ -18,9 +18,6 @@ body {
 }
 
 /* intro.css */
-.poster {
-  width: 50vh;
-}
 #wrap {
   flex: 1; /* 화면 비율에 따라 유연하게 늘어나거나 줄어들게 */
   margin-top: 10px;
@@ -41,7 +38,14 @@ body {
   display: flex;
   margin-top: 10px;
   width: 50%;
-  padding: 0px 30px;
+  padding: 5vh 5vh;
+  /* padding: 0px 30px; */
+}
+
+.poster {
+  width: 50vh;
+  height: 100%;
+  margin: auto;
 }
 
 #startBtn {
@@ -50,5 +54,6 @@ body {
   text-align: center;
   width: 300px;
   height: 70px;
+  margin: auto;
   letter-spacing: 2px;
 }
