--- a/css/question.css
+++ b/css/question.css
@@ -7,14 +7,16 @@ body {
   display: flex;
   flex-direction: column;
 }
-
+.progress {
+  background-color: red;
+  margin-top: 50px;
+}
 #wrap {
   flex: 1; /* 화면 비율에 따라 유연하게 늘어나거나 줄어들게 */
   margin-top: 10px;
   min-height: calc(100%-30px);
   /* 원래 container에 있던 스타일 */
   position: relative;
-  background-color: aqua;
   text-align: center;
   justify-content: center;
   display: flex;
