--- a/css/header.css
+++ b/css/header.css
@@ -28,11 +28,13 @@ header .inner {
 
 /* LOGO */
 header .inner .logo {
+  /* TODO 로고 만들면 이미지 크기로 바꾸어야 함 */
   color: black;
   font-size: 30px;
   /*TODO 항상 가운데로 하려면..? */
-  position: relative;
   left: 55px;
+  /* text-align: center; */
+  position: relative;
   cursor: pointer;
 }
 
@@ -51,4 +53,34 @@ header .inner .user li {
 }
 header .inner .user li:hover {
   background-color: rgba(112, 128, 144, 0.3);
+}
+
+@media screen and (max-width: 468px) {
+  header {
+    height: var(--nav-height-sm);
+  }
+
+  .back {
+    margin-left: 15px;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+  }
+
+  header .inner .logo {
+    font-size: 20px;
+    position: static;
+    line-height: var(--nav-height-sm);
+    /* left: 20px; */
+  }
+
+  header .inner .menu li {
+    margin: 0px 10px;
+    font-weight: bold;
+    cursor: pointer;
+    border: 2px solid black;
+    border-radius: 50px;
+    padding: 7px;
+    letter-spacing: 2px;
+  }
 }
