--- a/css/footer.css
+++ b/css/footer.css
@@ -2,10 +2,12 @@
 footer {
   width: 100%;
   height: 60px;
-  position: relative;
+  /* position: relative; */
+  position: absolute;
   text-align: center;
   font-weight: bold;
   font-size: 20px;
+  bottom: 0;
 }
 p {
   line-height: 60px;
