--- a/css/footer.css
+++ b/css/footer.css
@@ -2,8 +2,8 @@
 footer {
   width: 100%;
   height: 60px;
-  /* position: relative; */
-  position: absolute;
+  position: relative;
+  /* position: absolute; */
   text-align: center;
   font-weight: bold;
   font-size: 20px;
