--- a/css/header.css
+++ b/css/header.css
@@ -10,12 +10,13 @@ header {
   height: var(--nav-height-lg);
   z-index: 100;
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 header .inner {
-  height: 100%;
+  width: 100%;
   display: flex;
-  align-items: center;
   justify-content: space-between;
 }
 
@@ -28,14 +29,13 @@ header .inner {
 }
 
 /* LOGO */
-header .inner .logo {
-  /* TODO 로고 만들면 이미지 크기로 바꾸어야 함 */
+.logo {
+  display: flex;
   color: black;
   font-size: 30px;
-  /*TODO 항상 가운데로 하려면..? */
-  right: 55px;
-  /* text-align: center; */
-  position: relative;
+  position: absolute;
+  left: 47%;
+  align-items: center;
   cursor: pointer;
 }
 
