--- a/etc/test.css
+++ b/etc/test.css
@@ -5,7 +5,7 @@
 html,
 body {
   width: 100%;
-  height: 100%;
+  max-height: 100%;
 }
 body {
   margin: 0;
@@ -27,7 +27,6 @@ body {
 #wrap .intro {
   position: relative;
   display: table;
-  /* text-align: center; */
   width: 100%;
   margin-top: 20px;
   padding: 0 5vw;
@@ -36,18 +35,28 @@ body {
 .i_left {
   /* position: absolute; */
   display: table-cell;
+  vertical-align: center;
   width: 50%;
-  float: left;
+  height: 100%;
+  /* float: left; */
+  margin-right: 0 auto;
 }
 
+.slide {
+  display: flex;
+}
+.slide li img {
+  width: 100%;
+}
 .i_right {
-  justify-items: center;
   display: table-cell;
+  vertical-align: center;
   width: 50%;
 }
 
 .poster {
   width: 100%;
+  /* height: 50%; */
   margin: auto;
 }
 
@@ -58,11 +67,14 @@ body {
   width: 100%;
   height: 70px;
   margin: auto;
-  /* margin-left: 5vh; */
   letter-spacing: 2px;
 }
 
 /** carousel css */
+.carousel-item img {
+  width: max-content;
+  height: 100vh;
+}
 
 /* TODO */
 /** media query */
