--- a/css/finish.css
+++ b/css/finish.css
@@ -35,3 +35,20 @@
   border: solid 10px;
   border-color: black;
 }
+
+.fullscreen-video {
+  position: relative;
+  width: 100%;
+  height: 80%;
+  overflow: hidden;
+}
+.bgVideo {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  opacity: 0.4;
+}
