--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,8 @@
 }
 html,
 body {
-  height: 100%;
+  width: 100%;
+  max-height: 100%;
 }
 body {
   margin: 0;
@@ -20,27 +21,18 @@ body {
 #wrap {
   flex: 1; /* 화면 비율에 따라 유연하게 늘어나거나 줄어들게 */
   position: relative;
-}
-
-.i_left {
-  padding-left: 20px;
-  float: left;
-}
-
-.i_right {
-  padding-top: 7px;
-  padding-right: 20px;
-}
-#wrap .intro {
-  position: relative;
-  display: flex;
-  margin-top: 10px;
-  width: 50%;
-}
-
-.poster {
   width: 100%;
-  padding-right: 5vh;
+  height: 100%;
+}
+
+#wrap .intro {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  align-items: center;
+  margin-top: 20px;
+  padding: 0 7vw;
 }
 
 #startBtn {
@@ -50,23 +42,16 @@ body {
   width: 100%;
   height: 70px;
   margin: auto;
-  margin-left: 5vh;
+  margin-bottom: 5vh;
   letter-spacing: 2px;
 }
 
 /** carousel css */
-
-#carouselControls {
-  height: 78vh;
-}
-#carouselControls .fill {
-  background-position: center;
-  background-size: auto 100%;
-}
-#carouselControls .inner img {
+.carousel-item img {
   width: max-content;
-  height: 800px;
+  height: 80vh;
 }
+
 /* TODO */
 /** media query */
 
