--- a/etc/prev_index.css
+++ b/etc/prev_index.css
@@ -4,8 +4,7 @@
 }
 html,
 body {
-  width: 100%;
-  max-height: 100%;
+  height: 100%;
 }
 body {
   margin: 0;
@@ -21,18 +20,27 @@ body {
 #wrap {
   flex: 1; /* 화면 비율에 따라 유연하게 늘어나거나 줄어들게 */
   position: relative;
-  width: 100%;
-  height: 100%;
 }
 
+.i_left {
+  padding-left: 20px;
+  float: left;
+}
+
+.i_right {
+  padding-top: 7px;
+  padding-right: 20px;
+}
 #wrap .intro {
-  display: flex;
-  flex-direction: column;
   position: relative;
+  display: flex;
+  margin-top: 10px;
+  width: 50%;
+}
+
+.poster {
   width: 100%;
-  align-items: center;
-  margin-top: 20px;
-  padding: 0 7vw;
+  padding-right: 5vh;
 }
 
 #startBtn {
@@ -42,16 +50,23 @@ body {
   width: 100%;
   height: 70px;
   margin: auto;
-  margin-bottom: 5vh;
+  margin-left: 5vh;
   letter-spacing: 2px;
 }
 
 /** carousel css */
-.carousel-item img {
-  width: max-content;
-  height: 80vh;
-}
 
+#carouselControls {
+  height: 78vh;
+}
+#carouselControls .fill {
+  background-position: center;
+  background-size: auto 100%;
+}
+#carouselControls .inner img {
+  width: max-content;
+  height: 800px;
+}
 /* TODO */
 /** media query */
 
