--- a/css/question.css
+++ b/css/question.css
@@ -11,7 +11,7 @@ body {
   flex-direction: column;
 }
 .progress {
-  margin-bottom: 50px;
+  margin-bottom: 5vh;
 }
 #wrap {
   flex: 1; /* 화면 비율에 따라 유연하게 늘어나거나 줄어들게 */
@@ -30,15 +30,15 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-size: 40px;
+  font-size: 5vb;
   width: 100%;
-  height: 500px;
+  height: 50vh;
 }
 
 /** 답  */
 .answer {
   width: 100%;
-  height: 100px;
+  height: 10vh;
   display: flex;
   justify-content: space-around;
   margin-top: 7vh;
@@ -47,8 +47,8 @@ body {
 .answer2 {
   background-color: beige;
   border-radius: 10%;
-  width: 400px;
-  font-size: 15px;
+  width: 30vw;
+  font-size: 2vb;
 }
 /* 페이지 변환 애니메이션 */
 
@@ -64,6 +64,6 @@ body {
 }
 
 .question_img {
-  width: 600px;
-  margin-bottom: 50px;
+  width: 30vw;
+  margin-bottom: 5vh;
 }
