--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,23 @@
+@font-face {
+  font-family: "IAMAPLAYER";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/IAMAPLAYER.woff2")
+    format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "GmarketSansMedium";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+* {
+  font-family: "IAMAPLAYER";
+}
+
 :root {
   --nav-height-lg: 60px;
   --nav-height-sm: 30px;
@@ -43,7 +63,14 @@ body {
   height: 70px;
   margin: auto;
   margin-bottom: 5vh;
+  line-height: 65px;
   letter-spacing: 2px;
+  font-family: "GmarketSansMedium";
+}
+
+h1,
+p {
+  font-family: "GmarketSansMedium";
 }
 
 /** carousel css */
