--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: "IAMAPLAYER";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/IAMAPLAYER.woff2")
+    format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+* {
+  font-family: "IAMAPLAYER";
+}
+
 :root {
   --nav-height-lg: 60px;
   --nav-height-sm: 30px;
