--- a/css/index.css
+++ b/css/index.css
@@ -1,21 +1,9 @@
 @font-face {
-  font-family: "IAMAPLAYER";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/IAMAPLAYER.woff2")
-    format("woff2");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
   font-family: "GmarketSansMedium";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
     format("woff");
   font-weight: normal;
   font-style: normal;
-}
-
-* {
-  font-family: "IAMAPLAYER";
 }
 
 :root {
@@ -69,7 +57,7 @@ body {
 }
 
 h1,
-p {
+h4 {
   font-family: "GmarketSansMedium";
 }
 
