--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,14 @@
+@font-face {
+  font-family: "IAMAPLAYER";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/IAMAPLAYER.woff2")
+    format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* footer */
 footer {
+  font-family: "IAMAPLAYER";
   width: 100%;
   height: 60px;
   position: relative;
