--- a/css/question.css
+++ b/css/question.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "GmarketSansMedium";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 html,
 body {
   margin: 0;
@@ -33,6 +41,7 @@ body {
   font-size: 5vb;
   width: 100%;
   height: 50vh;
+  font-family: "GmarketSansMedium";
 }
 
 /** 답  */
@@ -42,13 +51,8 @@ body {
   display: flex;
   justify-content: space-around;
   margin-top: 7vh;
-}
-.answer1,
-.answer2 {
-  background-color: beige;
-  border-radius: 10%;
-  width: 30vw;
-  font-size: 2vb;
+
+  font-family: "GmarketSansMedium";
 }
 /* 페이지 변환 애니메이션 */
 
