--- a/css/finish.css
+++ b/css/finish.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: "GmarketSansMedium";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+div {
+  font-family: "GmarketSansMedium";
+}
 .poster {
   display: flex;
   align-items: center;
@@ -34,6 +45,7 @@
   border-radius: 10%;
   border: solid 10px;
   border-color: black;
+  cursor: pointer;
 }
 
 .fullscreen-video {
