--- a/css/finish.css
+++ b/css/finish.css
@@ -6,14 +6,14 @@
   font-style: normal;
 }
 
-div {
+.fullscreen-video {
   font-family: "GmarketSansMedium";
 }
 .poster {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
+  margin-top: 70px;
 }
 .img {
   border: solid 10px;
@@ -63,4 +63,7 @@ div {
   transform: translate(-50%, -50%);
   z-index: -1;
   opacity: 0.3;
+}
+#restart {
+  margin-bottom: 10px;
 }
