feat: 선택 크기 통일

--- a/css/question.css
+++ b/css/question.css
@@ -77,24 +77,8 @@ body {
   width: 10px;
 }
 
-#T {
-  width: 200px;
-  height: 70px;
-  word-wrap: break-word;
-}
-#F {
-  width: 200px;
-  height: 70px;
-  word-wrap: break-word;
-}
-
-#P {
-  width: 200px;
-  height: 70px;
-  word-wrap: break-word;
-}
-#J {
-  width: 200px;
-  height: 70px;
+button[type="button"] {
+  width: 350px;
+  height: 80px;
   word-wrap: break-word;
 }
