--- a/css/index.css
+++ b/css/index.css
@@ -63,8 +63,10 @@ h4 {
 
 /** carousel css */
 .carousel-item img {
-  width: max-content;
+  max-width: 100%;
   height: 80vh;
+  object-fit: contain;
+  transition: transform 0.3s ease-in-out;
 }
 
 /* TODO */
