--- a/css/finish.css
+++ b/css/finish.css
@@ -13,10 +13,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 70px;
+  margin-top: 10vh;
 }
 .img {
-  border: solid 10px;
+  border: solid 5px;
   border-color: black;
   width: 350px;
   height: 350px;
@@ -30,8 +30,9 @@
   text-align: center;
 }
 #explain {
-  width: 700px;
-  text-align: left;
+  width: 70%; /*%로 하니 화면 비율에 따라 자동으로 글자 줄 바꿈을 한다.*/
+  text-align: justify;
+  word-break: break-all;
 }
 .match {
   display: flex;
@@ -43,7 +44,7 @@
   width: 250px;
   height: 250px;
   border-radius: 10%;
-  border: solid 10px;
+  border: solid 5px;
   border-color: black;
   cursor: pointer;
 }
@@ -66,4 +67,41 @@
 }
 #restart {
   margin-bottom: 10px;
+}
+
+/* 넓이가 768px이하일 때 적용 */
+@media screen and (max-width: 768px) {
+  .img {
+    width: 250px;
+    height: 250px;
+    /* 다른 스타일 변경 내용 추가 */
+  }
+
+  .match {
+    flex-direction: column; /*열로 배치*/
+    align-items: center; /*가로 중앙에 배치*/
+    justify-content: center; /*세로 중앙에 배치*/
+  }
+
+  .match > div:not(:last-child) {
+    margin: 20px; /* 각 요소 사이의 간격 설정 */
+    text-align: center; /* 내부 요소들 가운데 정렬 */
+  }
+
+  .match img {
+    width: 200px;
+    height: 200px;
+    /* 다른 스타일 변경 내용 추가 */
+  }
+  .bgVideo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /*영상 비율을 유지하며 화면 비율에 맞춤*/
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    opacity: 0.3;
+  }
 }
