--- a/css/finish.css
+++ b/css/finish.css
@@ -29,10 +29,29 @@
   align-items: center;
   text-align: center;
 }
+#heroName {
+  font-size: 40px;
+}
+#resultMBTI {
+  font-size: 25px;
+}
 #explain {
   width: 70%; /*%로 하니 화면 비율에 따라 자동으로 글자 줄 바꿈을 한다.*/
   text-align: justify;
   word-break: break-all;
+  font-size: 25px;
+}
+#best {
+  font-size: 30px;
+}
+#bestMatch {
+  font-size: 20px;
+}
+#worst {
+  font-size: 30px;
+}
+#worstMatch {
+  font-size: 20px;
 }
 .match {
   display: flex;
@@ -58,6 +77,7 @@
 .bgVideo {
   width: 100%;
   height: auto;
+  object-fit: cover;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -72,9 +92,30 @@
 /* 넓이가 768px이하일 때 적용 */
 @media screen and (max-width: 768px) {
   .img {
-    width: 250px;
-    height: 250px;
+    width: 255px;
+    height: 255px;
     /* 다른 스타일 변경 내용 추가 */
+  }
+  #heroName {
+    font-size: 25px;
+  }
+  #resultMBTI {
+    font-size: 15px;
+  }
+  #explain {
+    font-size: 20px;
+  }
+  #best {
+    font-size: 20px;
+  }
+  #bestMatch {
+    font-size: 15px;
+  }
+  #worst {
+    font-size: 20px;
+  }
+  #worstMatch {
+    font-size: 15px;
   }
 
   .match {
