--- a/css/question.css
+++ b/css/question.css
@@ -9,9 +9,9 @@
 
 html,
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
-  height: 100%;
   animation: change 0.5s ease forwards;
   overflow-x: hidden;
 }
@@ -30,13 +30,16 @@ body {
 }
 
 body {
+  height: 100%;
   margin: 0;
   display: flex;
   flex-direction: column;
+  overflow: scroll;
 }
 .progress {
-  margin-bottom: 0;
+  margin-bottom: 10px;
 }
+
 #wrap {
   flex: 1; /* 화면 비율에 따라 유연하게 늘어나거나 줄어들게 */
   min-height: calc(100%-30px);
@@ -54,10 +57,10 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-size: 5vb;
+  font-size: 20px;
   width: 100%;
-  height: 50vh;
   font-family: "GmarketSansMedium";
+  margin-bottom: 20px;
 }
 
 /** 답  */
@@ -67,10 +70,12 @@ body {
   display: flex;
   justify-content: space-around;
   font-family: "GmarketSansMedium";
+  margin-bottom: 5px;
 }
 
 .question_img {
-  width: 25vw;
+  width: 350px;
+  height: 200px;
   margin-bottom: 5vh;
 }
 
@@ -80,5 +85,21 @@ button[type="button"] {
   word-wrap: break-word;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
+  .question_img {
+    width: 300px;
+    height: 170px;
+  }
+  .question {
+    font-size: 12px;
+  }
+  button[type="button"] {
+    font-size: 12px;
+    width: 80%;
+    height: 50px;
+    margin-bottom: 5px;
+  }
+  .answer {
+    display: block;
+  }
 }
