Fix header - create media query

--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,11 @@ body {
   padding: 0 7vw;
 }
 
+.i_right {
+  width: 100%;
+  padding: 0 10vw;
+}
+
 #startBtn {
   font-size: 30px;
   font-weight: bold;
@@ -73,4 +78,10 @@ h4 {
 /** media query */
 
 @media screen and (max-width: 768px) {
+  h4 {
+    font-size: 0.7em;
+  }
+  span {
+    display: block;
+  }
 }
