--- a/css/header.css
+++ b/css/header.css
@@ -8,7 +8,6 @@
 
 :root {
   --nav-height-lg: 60px;
-  --nav-height-sm: 30px;
 }
 /* header */
 ul {
@@ -48,13 +47,14 @@ header .inner {
   color: black;
   font-size: 30px;
   position: absolute;
-  left: 45%;
+  left: 41.5vw;
   align-items: center;
   cursor: pointer;
 }
 
 header .inner .user {
   display: flex;
+  margin-bottom: 0;
 }
 
 header .inner .user li {
@@ -69,10 +69,13 @@ header .inner .user li {
 header .inner .user li:hover {
   background-color: rgba(112, 128, 144, 0.3);
 }
+.dropdown_contain {
+  display: none;
+}
 
-@media screen and (max-width: 468px) {
+@media screen and (max-width: 768px) {
   header {
-    height: var(--nav-height-sm);
+    height: var(--nav-height-lg);
   }
 
   .back {
@@ -82,14 +85,34 @@ header .inner .user li:hover {
     cursor: pointer;
   }
 
-  header .inner .logo {
-    font-size: 20px;
-    position: static;
-    line-height: var(--nav-height-sm);
-    /* left: 20px; */
+  .logo {
+    left: 37%;
+    font-size: 1.5em;
+    line-height: var(--nav-height-lg);
   }
 
-  header .inner .menu li {
+  header .inner .user li {
+    display: none;
+  }
+
+  .dropdown_contain {
+    display: flex;
+    flex-direction: column;
+  }
+  .dropdown {
+    border: none;
+    background-color: transparent;
+  }
+  .list {
+    color: black;
+    width: 30px;
+    height: 30px;
+  }
+
+  .m_user {
+    display: none;
+  }
+  header .inner .m_user li {
     margin: 0px 10px;
     font-weight: bold;
     cursor: pointer;
@@ -97,5 +120,12 @@ header .inner .user li:hover {
     border-radius: 50px;
     padding: 7px;
     letter-spacing: 2px;
+  }
+  header .inner .m_user li:hover {
+    background-color: rgba(112, 128, 144, 0.3);
+  }
+
+  .dropdown_contain:hover .m_user {
+    display: block;
   }
 }
