--- a/css/header.css
+++ b/css/header.css
@@ -111,20 +111,28 @@ header .inner .user li:hover {
 
   .m_user {
     display: none;
+    margin-top: 110px;
   }
   header .inner .m_user li {
-    margin: 0px 10px;
+    /* position: absolute; */
+    margin: 10px 10px;
     font-weight: bold;
     cursor: pointer;
     border: 2px solid black;
     border-radius: 50px;
     padding: 7px;
     letter-spacing: 2px;
+    background-color: white;
+    text-align: center;
+    font-size: small;
   }
   header .inner .m_user li:hover {
     background-color: rgba(112, 128, 144, 0.3);
   }
 
+  .dropdown_contain:hover .dropdown {
+    display: block;
+  }
   .dropdown_contain:hover .m_user {
     display: block;
   }
