--- a/css/question.css
+++ b/css/question.css
@@ -13,7 +13,12 @@ body {
   margin: 0;
   padding: 0;
   animation: change 0.5s ease forwards;
-  overflow-x: hidden;
+  overflow: hidden;
+  -ms-overflow-style: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 /* 페이지 변환 애니메이션 */
