--- a/css/all_char.css
+++ b/css/all_char.css
@@ -2,14 +2,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
   height: 100%;
 }
-
-.line > img {
+.line {
+  display: flex;
+  text-align: center;
+}
+.box > img {
   border: solid 5px;
   border-color: black;
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   border-radius: 10%;
   margin: 10px;
 }
@@ -19,8 +23,14 @@ img:hover {
 }
 
 @media screen and (max-width: 768px) {
-  .line > img {
-    width: 45px;
-    height: 45px;
+  .box > img {
+    width: 150px;
+    height: 150px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .box > img {
+    width: 130px;
+    height: 130px;
   }
 }
