--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+/* 본문 글 폰트 변경 - noonnu폰트 */
 @font-face {
   font-family: "GmarketSansMedium";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
@@ -80,6 +81,7 @@ h4 {
     font-size: 0.7em;
   }
   span {
+    /* inline인 span에 block을 주어 줄바꿈 시킴 */
     display: block;
   }
 }
